src/test/ui/structs/struct-tuple-field-names.stderr
error[E0769]: tuple variant `E::S` written as struct variant
  --> $DIR/struct-tuple-field-names.rs:8:9
   |
LL |         E::S { 0, 1 } => {}
   |         ^^^^^^^^^^^^^
   |
help: use the tuple variant pattern syntax instead
   |
LL |         E::S(_, _) => {}
   |             ^^^^^^

error[E0769]: tuple variant `S` written as struct variant
  --> $DIR/struct-tuple-field-names.rs:13:9
   |
LL |         S { } => {}
   |         ^^^^^
   |
help: use the tuple variant pattern syntax instead
   |
LL |         S(_, _) => {}
   |          ^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0769`.
